Moving to ELA chain

--- a/public/403.html
+++ b/public/403.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>WeStarter</title>
+  <title>SilverStarter</title>
 </head>
 <style>
     html,body{
@@ -32,9 +32,9 @@
 <body>
 <div class="box">
   <p>Dear users,</p>
-  <p>WeStarter recently made a series of operational changes that will now restrict IP access to the following countries:</p>
+  <p>SilverStarter recently made a series of operational changes that will now restrict IP access to the following countries:</p>
   <p>Japan, Cuba, Iran, Mainland China, Hong Kong China, Macao China, The Democratic People's Republic of Korea, Sudan, Syria, United States of America and its Overseas Territories (American Samoa, Guam, Northern Mariana Islands, Puerto Rico and THE United States Virgin Islands), Canada and Singapore.</p>
-  <p>Thank you for supporting WeStarter!</p>
+  <p>Thank you for supporting SilverStarter!</p>
 </div>
 </body>
 </html>
