--- a/public/index.html
+++ b/public/index.html
@@ -164,13 +164,13 @@
     <div id="root"></div>
     <div class="loader-container">
         <div class="stage">
-            <div>
-                <img src="logo.png" style="width:500px;height:600px;">
-            </div>
-            <div class="loader-text-wrapper">
+            <!-- <div>
+                <img src="./logo.png" style="width:500px;height:600px;">
+            </div> -->
+            <!-- <div class="loader-text-wrapper">
                 <span class="loader-text">is loading</span>
                 <div class="dot-elastic"></div>
-            </div>
+            </div> -->
         </div>
     </div>
 </body>
